--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="content">
             <div class="column col-left">
                 <div class="img-card">
-                    <img src="picture.jpg" alt="">
+                    <img src="" alt="">
                 </div>
 
             </div>
